# Drug-side-effect-tracker

./: README.md  main.py  pyproject.toml  test.py
agent_app/: .env  .gitignore  agent.py  main.py  models.py  pyproject.toml  test.py
agent_app/instance/: drugs.db
agent_app/templates/: home.html
instance/: drugs.db
side_effects_mcp/: pyproject.toml
side_effects_mcp/src/side_effects_mcp/: server.py
