[project]
name = "slide-effect-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade-mcp>=1.11.0",
    "arcade-mcp-server>=1.17.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain[google-genai,openai]>=1.2.10",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = [
    "agent_app",
]
